# vpanel

./: .gitignore  PKGBUILD  bun.lockb  index.html  package.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  strut_manager.rs  system_tray.rs
src-tauri/src/commands/: icons.rs
src-tauri/src/systemtray_manager/: mod.rs  wayland.rs  x11.rs
src-tauri/src/tray/: menu_parser.rs  mod.rs  sni_item.rs  sni_watcher.rs  wayland.rs  x11.rs
src-tauri/src/window_manager/: mod.rs  wayland.rs  x11.rs
src/common/: icons.ts  window.ts
src/components/: ClockComponent.vue  SystemTrayComponent.vue  TrayPanel.vue  WindowsArea.vue
src/components/buttons/: WindowButtom.vue  WindowButton.vue
src/store/: configStore.ts
