[package]
name = "vpanel"
version = "0.0.1"
description = "Vasak OS panel"
authors = ["Vasak Group", "Joaquin (Pato) Decima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vasak_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x11rb = { version = "0.13", optional = true, features = ["allow-unsafe-code"] }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["staging", "client"], optional = true }
gtk = "0.18"
gdk = "0.18"
image = "0.25"
base64 = "0.21"
tauri-plugin-vicons = { git = "https://github.com/Vasak-OS/tauri-plugin-vicons", branch = "v2"}

quick-xml = { version = "0", features = ["serialize"] }
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
unescape = "0.1"
wait-timeout = "0.2"
zbus = { version = "3", default-features = false, features = ["tokio"] }
gdk-pixbuf = { version = "0"}
notifier-host = { path = "../../notifier-host" }
log = { version = "0.4" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"

[features]
default = ["x11", "wayland"]
x11 = ["dep:x11rb"]
wayland = ["dep:wayland-client", "dep:wayland-protocols"]
custom-protocol = ["tauri/custom-protocol"]
